workspace = { members = ["src/core", "src/server"] }

[package]
name = "tiny_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bytes = "1.5.0"
chrono = "0.4.35"
crossterm = "0.27.0"
hex = "0.4.3"
log = "0.4.21"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }

[[bin]]
name = "tinydb_cli"
path = "./src/core/main.rs"

[[bin]]
name = "tinydb_server"
path = "./src/server/main.rs"
