workspace = { members = [ "shared_lib", "src/core"] }

[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "shared_lib" }
actix = "0.13.3"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
bytes = "1.5.0"
chrono = "0.4.37"
crossterm = "0.27.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
log = "0.4.21"
maplit = "1.0.2"
num-traits = "0.2.18"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.12.2", features = ["cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.23.0"
uuid = { version = "1.8.0", features = ["v4"] }
#wasm-bindgen = "0.2.92"

[[bin]]
name = "oxide"
path = "./src/core/main.rs"

