[package]
name = "core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxide_server"
path = "main.rs"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[dependencies]
actix-web = "4.5.1"
bytes = "1.5.0"
chrono = "0.4.35"
crossterm = "0.27.0"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
maplit = "1.0.2"
num-traits = "0.2.18"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v4"] }
#wasm-bindgen = "0.2.92"