[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxide_repl"
path = "main.rs"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.3"
tokio = "1.36.0"
