[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxide_repl"
path = "main.rs"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[dependencies]
crossterm = "0.27.0"
regex = "1.10.3"
reqwest = "0.11.26"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.114"